security-group/main.tf
# create application load balancer security group
resource "aws_security_group" "alb_security_group" {
    name = "${var.project_name}-${var.environment}-alb_security_group"
    description = "Allow http/https access on port 80/443 from the internet"
    vpc_id = var.vpc_id

    ingress {
        description = "http access"
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = var.default_cidr
    }

    ingress {
        description = "https access"
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = var.default_cidr
    }

    egress {
        from_port = 0
        to_port = 0
        cidr_blocks = var.default_cidr
        protocol = "-1"
    }

    tags = {
      Name = "${var.project_name}-${var.environment}-alb_security_group"
    }
  
}

# create security group for the bastion host aka jump box
resource "aws_security_group" "bastion_security_group" {
    name = "${var.project_name}-${var.environment}-alb_security_group"
    description = "enable ssh access on port 22"
    vpc_id = var.vpc_id

    ingress {
        description = "ssh access"
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = var.ssh_ip
    }

    egress {
        from_port = 0
        to_port = 0
        cidr_blocks = var.default_cidr
        protocol = "-1"
    }

    tags = {
      Name = "${var.project_name}-${var.environment}-alb_security_group"
    }
  
}

# create security group for the app server
resource "aws_security_group" "app_server_security_group" {
    name = "${var.project_name}-${var.environment}-app_server_security_group"
    description = "enable http/https access onport 80/443 vai alb security group"
    vpc_id =  var.vpc_id

    ingress {
        description = "http access"
        from_port = 80
        to_port = 80
        protocol = "tcp"
        security_groups = [ aws_security_group.alb_security_group.id ]
    }

    ingress {
        description = "https access"
        from_port = 443
        to_port = 443
        protocol = "tcp"
        security_groups = [ aws_security_group.alb_security_group.id ]

    }

    egress {
        from_port = 0 
        to_port = 0
        protocol = "-1"
        cidr_blocks = var.default_cidr

    }

    tags = {
      Name = "${var.project_name}-${var.environment}-app_server_security_group"
    }

}


# create security group for the database
resource "aws_security_group" "database_security_group" {
    description = "enable mysql/aurora accesson port 3306"
    name = "${var.project_name}-${var.environment}-database_security_group"
    vpc_id = var.vpc_id

    ingress {
        description = "mysql/aurora access"
        from_port = 3306
        to_port = 3306
        protocol = "tcp"
        security_groups = [aws_security_group.app_server_security_group.id]

    }

    ingress {
        description = "custom access"
        from_port = 3306
        to_port = 3306
        protocol = "tcp"
        security_groups = [ aws_security_group.bastion_security_group.id]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = var.default_cidr
    }


    tags = {
      Name = "${var.project_name}-${var.environment}-database_security_group"
    }
  
}
